--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
 	text-align: center;
 }
 .title {
-	margin: 40px;
+	margin-top: 40px;
 	color: #808;
 	font-size: 40px;
 	font-weight: bolder;
