--- a/css/style.css
+++ b/css/style.css
@@ -2,38 +2,71 @@
 	box-sizing: border-box;
 }
 body {
-	background-color: #EFBBEF;
+	margin: 0px;
+	background-color: #202;
+	color: #FDF;
 	font-family: cursive;
+
 }
 a {
 	color: unset;
 	text-decoration: none;
 }
-a:hover {
-	color: #808;
-}
-.title, .title2, .item {
+.title, .title2 {
 	margin: 10px;
 	padding: 10px;
 	text-align: center;
 }
 .title {
 	margin-top: 40px;
-	color: #808;
 	font-size: 40px;
-	font-weight: bolder;
 }
 .title2 {
 	font-size: 28px;
 }
 .items {
 	width: 400px;
+	height: calc(100vh - 360px);
 	margin-left: auto;
 	margin-right: auto;
-	padding: 10px;
-	background-color: #EFAAEF;
+	border-radius: 20px;
+	padding: 20px;
+	background-color: #FDF;
+	overflow: scroll;
+	overflow-x: hidden;
+	overflow-y: auto;
 }
 .item {
+	border-radius: 10px;
+	padding: 10px;
+	padding-left: 30px;
 	font-size: 28px;
-	text-align: unset;
+	color: #202;
+	cursor: pointer;
+}
+.item:hover {
+	background-color: #202;
+	color: #FDF;
+}
+.item .item {
+	display: none;
+	color: #FDF;
+}
+.item:hover .item {
+	display: block;
+}
+.item .item:hover {
+	background-color: #FDF;
+	color: #202;
+}
+
+.footer {
+    /*float: left;*/
+    width: 100%;
+    height: 100px;
+    line-height: 100px;
+    text-align: center;
+    background-color: #848;
+    color: #000;
+    font-size: 20px;
 }
