--- a/css/style.css
+++ b/css/style.css
@@ -24,21 +24,36 @@ a {
 	font-size: 28px;
 }
 .items {
+	position: relative;
 	width: 90%;
 	height: calc(100vh - 200px);
 	margin-left: auto;
 	margin-right: auto;
 	border-radius: 20px;
-	padding: 20px;
 	background-color: #FDF;
+	overflow: hidden;
+}
+.page {
+	width: 100%;
+	height: 100%;
+	padding: 20px;
 	overflow: scroll;
 	overflow-x: hidden;
 	overflow-y: auto;
+	position: absolute;
+	left: 100%;
+	top: 0px;
+}
+#page {
+	left: 0%;
 }
 .item {
+	float: left;
+	width: 100%;
 	border-radius: 10px;
 	padding: 10px;
-	padding-left: 30px;
+	padding-left: 20px;
+	padding-right: 20px;
 	font-size: 28px;
 	color: #202;
 	cursor: pointer;
@@ -47,17 +62,59 @@ a {
 	background-color: #202;
 	color: #FDF;
 }
-.item .item {
-	display: none;
+.item_l {
+	float: left;
+}
+.item_r {
+	float: right;
+}
+.arrow_r {
+	transform: rotate(270deg);
+}
+.arrow_l {
+	transform: rotate(90deg);
+}
+
+/*.item, .item2 {
+	float: left;
+	width: 100%;
+	border-radius: 10px;
+	padding: 10px;
+	padding-left: 30px;
+	padding-right: 30px;
+	font-size: 28px;
+	color: #202;
+	cursor: pointer;
+}
+.item_i {
+	padding-top: 10px;
+}
+.item2 {
 	color: #FDF;
-}
-.item:hover .item {
-	display: block;
-}
-.item .item:hover {
+}	
+.item2:hover {
 	background-color: #FDF;
 	color: #202;
 }
+.item:hover {
+	background-color: #202;
+	color: #FDF;
+}
+.item .item_i {
+	display: none;
+}
+.item:hover .item_i {
+	display: block;
+}
+.all {
+	overflow: hidden;
+}
+.le {
+	float: left;
+}
+.ri {
+	float: right;
+}*/
 
 .footer {
     /*float: left;*/
