--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 	box-sizing: border-box;
 }
 body {
-	margin: 0px;
+	margin: 0;
 	background-color: #202;
 	color: #FDF;
 	font-family: cursive;
@@ -76,7 +76,6 @@ a {
 }
 
 .footer {
-    /*float: left;*/
     width: 100%;
     height: 100px;
     line-height: 100px;
