--- a/style.css
+++ b/style.css
@@ -1,37 +1,41 @@
 * {
 	box-sizing: border-box;
+	user-select: none;
 }
 body {
 	margin: 0;
-	background-color: #DDF;
+	background-color: #EFF;
 	font-family: cursive;
 }
 a {
 	color: unset;
 	text-decoration: none;
 }
-.title, .title2 {
-	margin: 10px;
-	padding: 10px;
+#title1, #title2 {
 	text-align: center;
 }
-.title {
-	margin-top: 40px;
+#title1 {
+	margin-top: 80px;
+	height: 60px;
 	font-size: 40px;
 }
-.title2 {
+#title2 {
+	height: 60px;
 	font-size: 28px;
 }
-.items {
+
+#items {
 	position: relative;
 	width: 80%;
-	height: 480px;
+	max-width: 400px;
+	height: calc(100vh - 240px);
+	min-height: 480px;
 	margin-left: auto;
 	margin-right: auto;
 	border-radius: 20px;
 
-	background-color: #004;
-	color: #FFF;
+	background-color: #FD6;
+	/*color: #FFF;*/
 	overflow: hidden;
 }
 .page {
@@ -60,8 +64,8 @@ a {
 	cursor: pointer;
 }
 .item:hover {
-	background-color: #DDF;
-	color: #000;
+	background-color: #EFF;
+	color: #800;
 }
 .item:active {
 	background-color: #BBD;
@@ -83,16 +87,16 @@ a {
 .footer {
 	width: 100%;
 	height: 100px;
+	margin-top: 40px;
 	line-height: 100px;
 	text-align: center;
 	background-color: #848;
 	color: #000;
 	font-size: 20px;
 }
-@media only screen and (min-width: 500px) {
-	/* For desktop: */
+/*@media only screen and (min-width: 500px) {
 	.items {width: 400px;}
-}
+}*/
 
 .img_com {
 	position: absolute;
