--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 body {
 	margin: 0;
-	background-color: #EFF;
+	background-color: #FBFFFF;
 	font-family: cursive;
 }
 a {
@@ -13,20 +13,19 @@ a {
 }
 #title1, #title2 {
 	text-align: center;
+	height: 60px;
 }
 #title1 {
 	margin-top: 80px;
-	height: 60px;
 	font-size: 40px;
 }
 #title2 {
-	height: 60px;
 	font-size: 28px;
 }
 
 #items {
 	position: relative;
-	width: 80%;
+	width: 100%;
 	max-width: 400px;
 	height: calc(100vh - 240px);
 	min-height: 480px;
@@ -64,7 +63,7 @@ a {
 	cursor: pointer;
 }
 .item:hover {
-	background-color: #EFF;
+	background-color: #FBFFFF;
 	color: #800;
 }
 .item:active {
@@ -109,7 +108,7 @@ a {
 	position: absolute;
 	width: 200px;
 	height: 200px;
-	background-color: #DDF;
+	background-color: #FBFFFF;
 	border-radius: 10px;
 	z-index: 1;
 }
@@ -120,7 +119,7 @@ a {
 	width: 100px;
 	height: 100px;
 	border-radius: 50px;
-	background-color: #DDF;
+	background-color: #FBFFFF;
 	z-index: 3;
 }
 #img_com3 {
@@ -130,7 +129,7 @@ a {
 	width: 120px;
 	height: 120px;
 	border-radius: 60px;
-	background-color: #004;
+	background-color: #FD6;
 	z-index: 2;
 }
 #img_com4 {
@@ -140,7 +139,7 @@ a {
 	width: 30px;
 	height: 40px;
 	border-radius: 10px;
-	background-color: #DDF;
+	background-color: #FBFFFF;
 	z-index: 4;
 }
 #img_com5 {
@@ -150,7 +149,7 @@ a {
 	width: 200px;
 	height: 200px;
 	border-radius: 10px;
-	background-color: #004;
+	background-color: #FD6;
 	z-index: 6;
 }
 #img_com6 {
