--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ a {
 	height: 60px;
 }
 #title1 {
-	margin-top: 80px;
+	margin-top: 60px;
 	font-size: 40px;
 }
 #title2 {
@@ -34,7 +34,6 @@ a {
 	border-radius: 20px;
 
 	background-color: #FD6;
-	/*color: #FFF;*/
 	overflow: hidden;
 }
 .page {
@@ -52,22 +51,21 @@ a {
 	left: 0%;
 	z-index: 44;
 }
-.item {
+.item, #footer_floor {
 	float: left;
 	width: 100%;
+	margin: 4px;
 	border-radius: 10px;
 	padding: 10px;
 	padding-left: 20px;
 	padding-right: 20px;
 	font-size: 28px;
+	
+}
+.item:hover, #footer_cover:hover {
 	cursor: pointer;
-}
-.item:hover {
-	background-color: #FBFFFF;
-	color: #800;
-}
-.item:active {
-	background-color: #BBD;
+	box-shadow: 2px 2px 2px 1px;
+	background-color: #FF8;
 }
 
 .item_l {
@@ -82,16 +80,27 @@ a {
 .arrow_l {
 	transform: rotate(90deg);
 }
-
-.footer {
+#footer_floor {
+	position: relative;
+}
+#footer_cover {
+	position: absolute;
+	left: 0%;
+	top: 0%;
 	width: 100%;
-	height: 100px;
-	margin-top: 40px;
-	line-height: 100px;
+
+	border-radius: 10px;
+	padding: 10px;
+	padding-left: 20px;
+	padding-right: 20px;
+	font-size: 28px;
+	
+	background-color: #FD6;
+}
+#footer {
 	text-align: center;
-	background-color: #848;
-	color: #000;
 	font-size: 20px;
+	color: #404;
 }
 /*@media only screen and (min-width: 500px) {
 	.items {width: 400px;}
