--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ a {
 
 #items {
 	position: relative;
-	width: 100%;
+	width: calc(100% - 40px);
 	max-width: 400px;
 	height: calc(100vh - 240px);
 	min-height: 480px;
@@ -60,6 +60,7 @@ a {
 	padding-left: 20px;
 	padding-right: 20px;
 	font-size: 24px;
+	background-color: #FD6;
 	
 }
 .item:hover {
@@ -87,9 +88,8 @@ a {
 #footer {
 	position: absolute;
 	top: -5px;
-	left: calc(-100% - 10px);
-
-	width: calc(100% + 10px);
+	left: calc(-100% - 72px);
+	width: calc(100% + 48px);
 	min-height: calc(100% + 10px);
 
 	padding-top: 15px;
