--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 body {
 	margin: 0;
-	background-color: #FBFFFF;
+	background-color: #222;
 	font-family: cursive;
 }
 a {
@@ -14,6 +14,7 @@ a {
 #title1, #title2 {
 	text-align: center;
 	height: 60px;
+    color: #FFF;
 }
 #title1 {
 	margin-top: 60px;
@@ -93,7 +94,7 @@ a {
 	padding: 0px;
 	text-align: center;
 	font-size: 24px;
-	color: #404;
+	/* color: #404; */
 	background-color: #FD6;
 }
 /*@media only screen and (min-width: 500px) {
